--- a/playground/router.html
+++ b/playground/router.html
@@ -26,6 +26,7 @@
         }
 
         var router = new VueRouter({
+            mode: 'history',
             // 페이지의 라우팅 정보
             routes: [
                 {
